# crew-ai-quickstart

./: .gitignore  Readme.md  api.py  config.py  requirements.txt  start_llama_stack.sh  streamlit.py
API/: config.py
API/alt_flows/: multi_agent_crewai.py
API/knowledge/: info.txt
API/lib/: llama_stack_llm.py
UI/: Rag Chat.py
UI/pages/: Agents.py  CreateAgent.py
alt_flows/: main.py  multi_agent.py  multi_agent_crewai.py  multi_agent_with_agent_tools.py
fast_api/: Readme.md  api.py  pyproject.toml
fast_api/alt_flows/: multi_agent.py  multi_agent_crewai.py  shared.py
fast_api/lib/: llama_stack_client.py
knowledge/: info.txt  working_llama_stack_command.txt
lib/: llama_stack_client.py  models.py  prompts.py
llama_stack_agents/: LlamaStackLLM.py
pages/: Agents.py
streamlit_app/: Rag Chat.py
streamlit_app/lib/clients/: agent_client.py  base_client.py  chat_client.py  crew_client.py  task_client.py
streamlit_app/pages/: Agents.py  CreateAgent.py
