[project]
name = "llama-stack-agents"
version = "0.1.0"
description = "Llama Stack agents project"
requires-python = ">=3.10"
dependencies = [
    "llama-stack",
    "ollama",  # For Ollama inference provider
    "together",  # For Together AI provider
    "llama-stack-client",  # For client library
    "botocore",
    "boto3",
    "anthropic",
    "openai",
    "torch",
    "faiss-cpu",
    "sqlite_vec",
    "mcp",
    "autoevals",
    "sentence-transformers",
    "einops",
    "requests",
    "crewai[tools]",  # CrewAI with tools support
]

